src/main/java/org/example/madeinha/global/error/ErrorCode.java
package org.example.madeinha.global.error;

public interface ErrorCode {
    int getStatus();
    String getCode();
    String getMessage();
}
